subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/valid/For_Valid_1.while
int getTwo() {
    int r;
    for (int i = 0; i < 5; i = i + 1) {
        r = i;
        if (i == 2) {
            break;
        }
    }

    return r;
}

void main() {
    print getTwo();
}
