subprojects/swen430/src/test/resources/com/hjwylde/uni/swen430/assignment01/tests/invalid/DefiniteAssign_Invalid_3.while
int f(int x) {
    if(y > 0) {
        x = x + 1;
    }
    return x;
}
